@@ -38,8 +38,8 @@ set_time_limit(0);
 /* define package */
 define('PKG_NAME','tagLister');
 define('PKG_NAME_LOWER','taglister');
-define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','pl');
+define('PKG_VERSION','1.0.1');
+define('PKG_RELEASE','rc1');
 
 /* define sources */
 $root = dirname(dirname(__FILE__)).'/';
@@ -111,7 +111,7 @@ $builder->putVehicle($vehicle);
 /* now pack in the license file, readme and setup options */
 $builder->setPackageAttributes(array(
     'license' => file_get_contents($sources['docs'] . 'license.txt'),
-    'readme' => file_get_contents($sources['docs'] . 'readme.txt'),
+    'readme' => file_get_contents($sources['docs'] . 'readme.txt')."\n".file_get_contents($sources['docs'].'changelog.txt'),
     //'setup-options' => array(
 //        'source' => $sources['build'].'setup.options.php',
   //  ),
